--- a/themes/laurel-leaf/pages/home.htm
+++ b/themes/laurel-leaf/pages/home.htm
@@ -1,6 +1,8 @@
 title = "Demonstration"
 url = "/"
 layout = "default"
+
+[lunchoffers]
 ==
 <div class="container-fluid">
     <div class="row">
@@ -9,5 +11,16 @@ layout = "default"
 </div>
 
 <div class="container">
-    {% partial "site/sportstv.htm" %}
+
+	<div class="row">
+		<div class="col-sm-6">
+			{% partial "food_today.htm" %}
+		</div>
+		<div class="col-sm-6">
+			{% partial "site/sportstv.htm" %}
+		</div>
+	</div>
+	
 </div>
+
+
