--- a/themes/laurel-leaf/pages/contact-reservation.htm
+++ b/themes/laurel-leaf/pages/contact-reservation.htm
@@ -2,6 +2,8 @@ title = "Contact & Reservation"
 description = "Contact Details and Reservation Form"
 url = "/contact-reservation"
 layout = "default"
+
+[reservation]
 ==
 <div class="container">
 
@@ -35,20 +37,21 @@ layout = "default"
 												A-1060 Wien <br>
 												T +43 1 512 35 23 <br>
 												<br>
-
-<strong>Öffnungszeiten</strong><br>
-Montag - Donnerstag	 11.00 - 01.00 <br>
-Freitag, Samstag 	11.00 - 03.00 <br>
-Sonntag und Feiertag 	17.00 - 00.00
-</div>
-            <div class="col-sm-6">
-            	<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2687.12777489514!2d16.35673813159021!3d48.20018387922846!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x476d078f88c4d8e9%3A0x235557c19dd4fe8a!2sLaurel+Leaf+Irish+Pub+Vienna!5e0!3m2!1sde!2sat!4v1504893659845" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-            </div>
-            </div>
-
+                                                <strong>Öffnungszeiten</strong><br>
+                                                Montag - Donnerstag  11.00 - 01.00 <br>
+                                                Freitag, Samstag    11.00 - 03.00 <br>
+                                                Sonntag und Feiertag    17.00 - 00.00
+                                                </div>
+                                                            <div class="col-sm-6">
+                                                                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2687.12777489514!2d16.35673813159021!3d48.20018387922846!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x476d078f88c4d8e9%3A0x235557c19dd4fe8a!2sLaurel+Leaf+Irish+Pub+Vienna!5e0!3m2!1sde!2sat!4v1504893659845" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+                                                            </div>
+                                                            </div>
 
 
-        </div>
+
+                                                        </div>
+
+
 
         <!-- Reservation -->
         <div role="tabpanel" class="tab-pane dropdown fade" id="reservation">
@@ -57,7 +60,91 @@ Sonntag und Feiertag 	17.00 - 00.00
             </div>
 
             <div class="row">
-            	<p>reservation content bla</p>
+
+                <div class="col-md-12">
+                    <p><strong>Tischreservierung im Laurel Leaf, wichtige Hinweise:</strong><br>
+                        Wir antworten innerhalb von 24 Stunden auf eine Reservierungsanfrage. Solltest du innerhalb dieser Zeit keine Antwort bekommen haben, bitten wir dich, telefonisch unter 01 /585 68 65 während unserer regulären Öffnungszeiten anzurufen. Für Gruppen grösser als 10 Personen (Geburtstagsparty's, Sponsionsfeier, etc.) bitten wir dich, telefonisch anzufragen.
+                    </p>
+                    <hr>
+                </div>
+
+
+                <div class="col-md-6">
+                    <form
+                            action="reservation"
+                            method="POST"
+                            id="reservationForm"
+                            data-request="onSend"
+                            data-request-validate
+                            data-request-flash>
+
+
+                        <div class="form-group">
+                            <label for="date" class="required">Datum</label>
+                            <input type='date' name="date" value="{{ form_value('date') }}" class="form-control" required/>
+                            <p class="help-block">Format tt.mm.jjjj - z.B. <strong>{{ "now"|date("d.m.Y") }}</strong></p>
+                            <div data-validate-for="date"></div>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="time" class="required">Zeit</label>
+                            <input type='time' name="time" value="{{ form_value('time') }}" class="form-control" required/>
+                            <p class="help-block">Format hh:ii - z.B. <strong>18:00</strong></p>
+                            <div data-validate-for="time">Sorry aber wir akzeptieren keine Reservierungen nach 20:00!</div>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="name" class="required">Dein Name</label>
+                            <input type="text" name="name" value="{{ form_value('name') }}" class="form-control" required/>
+                            <div data-validate-for="name"></div>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="email" class="required">Deine E-Mail</label>
+                            <input type="text" name="email" value="{{ form_value('email') }}" class="form-control" required/>
+                            <div data-validate-for="email"></div>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="people" class="required">Wieviele Personen?</label>
+                            <input type="number" name="people" min="1" max="10" class="form-control" required/>
+                            <div data-validate-for="people"></div>
+                        </div>
+
+                        <div class="radio">
+                            <label>
+                                <input type="radio" name="smoker" value="nonsmoker" {% if form_value('smoker') == "nonsmoker" %} checked {% endif %}>
+                                Nichtraucher Bereich
+                            </label>
+                        </div>
+                        <div class="radio">
+                            <label>
+                                <input type="radio" name="smoker" value="smoker" {% if form_value('smoker') == "smoker" %} checked {% endif %}>
+                                Raucher Bereich
+                            </label>
+                            <p class="help-block">Wenn hier keine Angabe gemacht wird, wird ein beliebiger Bereich zugeteilt.
+                            </p>
+                        </div>
+
+                        <div class="form-group">
+                            {{ form_label('message', 'Nachricht') }}
+                            <textarea class="form-control" name="sometext" rows="3">{{ form_value('sometext') }}</textarea>
+                        </div>
+
+                        <div class="form-group">
+                            <button
+                                    id="submit"
+                                    type="submit"
+                                    class="btn btn-info btn-lg">
+                                Absenden
+                            </button>
+                        </div>
+
+                    </form>
+
+
+                </div>
+
             </div>
 
         </div>
