--- a/themes/laurel-leaf/pages/contact-reservation.htm
+++ b/themes/laurel-leaf/pages/contact-reservation.htm
@@ -29,27 +29,57 @@ layout = "default"
             <div class="text-center">
                 <h1 class="hidden-xs">Contact</h1>
             </div>
-            
 
             <div class="row">
-            	<div class="col-xs-8 col-sm-6"><strong>Laurel Leaf Irish Pub Vienna</strong><br>
-												Theobaldgasse 15 <br>
-												A-1060 Wien <br>
-												T +43 1 512 35 23 <br>
-												<br>
-                                                <strong>Öffnungszeiten</strong><br>
-                                                Montag - Donnerstag  11.00 - 01.00 <br>
-                                                Freitag, Samstag    11.00 - 03.00 <br>
-                                                Sonntag und Feiertag    17.00 - 00.00
-                                                </div>
-                                                            <div class="col-sm-6">
-                                                                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2687.12777489514!2d16.35673813159021!3d48.20018387922846!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x476d078f88c4d8e9%3A0x235557c19dd4fe8a!2sLaurel+Leaf+Irish+Pub+Vienna!5e0!3m2!1sde!2sat!4v1504893659845" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-                                                            </div>
-                                                            </div>
 
+            	<div class="col-sm-6">
+                    <strong>Laurel Leaf Irish Pub Vienna</strong><br>
+					Theobaldgasse 15 <br>
+					A-1060 Wien <br>
+                    <br>
+                    <strong>Telefon</strong> <br>
+				    +43 1 585 68 65 <br>
+					<br>
+                    <strong>Öffnungszeiten</strong><br>
+                    <div class="table-responsive">
+                        <table class="table table-hover">
+                            <tbody>
+                                <tr>
+                                    <td>Montag - Donnerstag</td>
+                                    <td>11.00 - 01.00</td>
+                                </tr>
+                                <tr>
+                                    <td>Freitag, Samstag</td>
+                                    <td>11.00 - 03.00</td>
+                                </tr>
+                                <tr>
+                                    <td>Sonntag und Feiertag</td>
+                                    <td>17.00 - 00.00</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                    
+                    <strong><i class="icon-facebook icon-2x"></i><a href="https://www.facebook.com/pages/Laurel-leaf-1060/145081492197194" target="_blank"> Laurel Leaf Facebook Seite</a></strong>
 
+                    <div class="tripadvisor">
+                        <div id="TA_restaurantWidgetWhite76" class="TA_restaurantWidgetWhite">
+                        <ul id="DSInxQ0c" class="TA_links NTI5kszNH">
+                        <li id="Wt2WMzggd" class="TTNLUq">
+                        <a target="_blank" href="https://www.tripadvisor.at/"><img src="https://www.tripadvisor.at/img/cdsi/partner/tripadvisor_logo_117x18-24177-2.png" alt="TripAdvisor"/></a>
+                        </li>
+                        </ul>
+                        </div>
+                        <script src="https://www.jscache.com/wejs?wtype=restaurantWidgetWhite&amp;uniq=76&amp;locationId=6786833&amp;icon=knifeAndFork&amp;lang=de_AT&amp;display_version=2"></script>
+                    </div>
+                </div>
 
-                                                        </div>
+                <div class="col-sm-6">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2687.12777489514!2d16.35673813159021!3d48.20018387922846!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x476d078f88c4d8e9%3A0x235557c19dd4fe8a!2sLaurel+Leaf+Irish+Pub+Vienna!5e0!3m2!1sde!2sat!4v1504893659845" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>     
+                </div>
+
+            </div><!-- End row -->
+        </div><!-- End Tabpanel -->
 
 
 
