sportstv teams and leagues seeder

--- a/themes/laurel-leaf/pages/photo-gallery.htm
+++ b/themes/laurel-leaf/pages/photo-gallery.htm
@@ -22,7 +22,7 @@ noGalleriesMessage = "No galleries found"
 
 	<div class="container">
 
-		<h1 class="title text-center">GALLERY</h1>
+		<h1 class="title text-center hidden-xs">GALLERY</h1>
 
 		<div class="row">
 				{% for gallery in galleries %}
