general updates, contact plugin

--- a/themes/laurel-leaf/pages/food-drinks.htm
+++ b/themes/laurel-leaf/pages/food-drinks.htm
@@ -182,7 +182,7 @@ layout = default
 
                         <div class="row">
                             <div class="col-sm-12 text-center weekday">
-                                {{ food.date|strftime('%A, %d.%m.%Y') }}
+                                {{ food.date|strftime('%A, %e.%m.%Y') }}
                                 <hr>
                             </div>
                         </div>
