--- a/themes/laurel-leaf/pages/home.htm
+++ b/themes/laurel-leaf/pages/home.htm
@@ -62,10 +62,10 @@ use Milo\HeroImage\Models\HeroImage;
 			<br>
 			<div class="row">
 				<div class="col-sm-4 col-sm-offset-2">
-					<img src="{{ 'assets/images/billard.png'|theme }}" alt="play Billard in Laurel Leaf" class="img-responsive img-rotate-up">
+					<img src="{{ 'assets/images/billard-reduziert.png'|theme }}" alt="play Billard in Laurel Leaf" class="img-responsive img-rotate-up">
 				</div>
 				<div class="col-sm-4">
-					<img src="{{ 'assets/images/darts.png'|theme }}" alt="play Darts in Laurel Leaf" class="img-responsive img-rotate-down">
+					<img src="{{ 'assets/images/darts-reduziert.png'|theme }}" alt="play Darts in Laurel Leaf" class="img-responsive img-rotate-down">
 				</div>
 			</div>
 		</div>
