heroimage, reservation, home

--- a/themes/laurel-leaf/pages/home.htm
+++ b/themes/laurel-leaf/pages/home.htm
@@ -8,7 +8,9 @@ layout = "default"
 <?
 use Milo\HeroImage\Models\HeroImage;
     function onStart() {
-        $this['heroimages'] = HeroImage::limit(3)->get();
+        $this['heroimages'] = HeroImage::limit(3)
+        						->where('is_active', '=', true)
+        						->get();
     }
 ?>
 ==
