--- a/themes/laurel-leaf/pages/error.htm
+++ b/themes/laurel-leaf/pages/error.htm
@@ -4,7 +4,7 @@ layout = "default"
 ==
 <div class="jumbotron">
     <div class="container">
-        <h1>Error</h1>
-        <p>We're sorry, but something went wrong and the page cannot be displayed.</p>
+        <h1>Fehler</h1>
+        <p>sorry, aus irgendeinem Grund gab es einen Fehler und die Seite kann nicht angezeigt werden.</p>
     </div>
 </div>
