--- a/themes/laurel-leaf/pages/home.htm
+++ b/themes/laurel-leaf/pages/home.htm
@@ -33,7 +33,7 @@ use Milo\HeroImage\Models\HeroImage;
 				<div class="col-sm-6 col-sm-offset-1">
 					{% partial "food_today.htm" %}
 				</div>
-				<div class="col-sm-5 text-center">
+				<div class="col-sm-5 text-center p-b-sm">
 					<img src="{{ 'assets/images/burger-billard-offer-ll.jpg'|theme }}" alt="Billard Burger Offer Montag - Samstag" class="img-rotate-down-2 img-responsive">
 				</div>
 			</div>
@@ -73,6 +73,8 @@ use Milo\HeroImage\Models\HeroImage;
 		</div>
 	</div>
 </div> <!-- End Billard & Darts Section -->
+
+{% partial "site/story-of-laurelleaf.htm" %}
 
 
 
