heroimage reorder, theme-preview.png

--- a/plugins/milo/heroimage/controllers/heroimages/_list_toolbar.htm
+++ b/plugins/milo/heroimage/controllers/heroimages/_list_toolbar.htm
@@ -5,6 +5,11 @@
         New Hero Image
     </a>
 
+    <a
+        href="<?= Backend::url('milo/heroimage/heroimages/reorder') ?>"
+        class="btn btn-primary oc-icon-sort">Reorder HeroImages
+    </a>
+
     <button
         class="btn btn-danger oc-icon-trash-o"
         disabled="disabled"
