--- a/themes/laurel-leaf/pages/home.htm
+++ b/themes/laurel-leaf/pages/home.htm
@@ -13,6 +13,7 @@ use Milo\HeroImage\Models\HeroImage;
     function onStart() {
         $this['heroimages'] = HeroImage::limit(3)
         						->where('is_active', '=', true)
+        						->orderBy('sort_order')
         						->get();
     }
 ?>
