set redirects with new Plugin

--- a/themes/laurel-leaf/pages/home.htm
+++ b/themes/laurel-leaf/pages/home.htm
@@ -63,7 +63,7 @@ use Milo\HeroImage\Models\HeroImage;
 {% endif %} <!-- End Sports TV Section -->
 
 <!-- Billard & Darts Section -->
-<div class="jumbotron red-gradient">
+<div id="billard-darts" class="jumbotron red-gradient">
 	<div class="bricks">	
 		<div class="container">
 			<div class="row"><div class="col-sm-6 col-sm-offset-3"><h1>Billard &amp; Darts</h1></div></div>
