meta description 3 pages

--- a/themes/laurel-leaf/pages/contact-reservation.htm
+++ b/themes/laurel-leaf/pages/contact-reservation.htm
@@ -1,7 +1,7 @@
 title = "Contact & Reservation"
 url = "/contact-reservation"
 layout = "default"
-description = "Contact Details and Reservation Form"
+description = "Adressinformationen, Google Maps Standort Link, Telefonnummer, Facebook Seite - kontaktiere uns schriftlich. Reserviere einen Tisch im Laurel Leaf."
 is_hidden = 0
 
 [reservation]
