--- a/themes/laurel-leaf/pages/food-drinks.htm
+++ b/themes/laurel-leaf/pages/food-drinks.htm
@@ -1,5 +1,5 @@
 title = 'Food & Drinks'
-description = 'Burger, Riesenschwarzbrote, Spareribs, Fingerfood Körberl in verschiedenen Varianten - ein wöchentlich wechselndes Mittagsmenü. Vielfältige Biere, Cider, uvm.'
+meta_description = 'Burger, Riesenschwarzbrote, Spareribs, Fingerfood Körberl in verschiedenen Varianten - ein wöchentlich wechselndes Mittagsmenü. Vielfältige Biere, Cider, uvm.'
 url = '/food-drinks'
 layout = default
 
