--- a/themes/laurel-leaf/pages/photo-gallery.htm
+++ b/themes/laurel-leaf/pages/photo-gallery.htm
@@ -1,7 +1,7 @@
 title = "Photo Gallery"
 url = "/photo-gallery"
 layout = "default"
-description = "schau dir Fotos von bereits stattgefundenen Events an. Buche das Laurel Leaf für deine Feier?"
+meta_description = "schau dir Fotos von bereits stattgefundenen Events an. Buche das Laurel Leaf für deine Feier?"
 is_hidden = 0
 
 [galleriesList]
