image optimizations homepage

--- a/themes/laurel-leaf/pages/home.htm
+++ b/themes/laurel-leaf/pages/home.htm
@@ -61,14 +61,20 @@ use Milo\HeroImage\Models\HeroImage;
 <div id="billard-darts" class="jumbotron red-gradient">
 	<div class="bricks">	
 		<div class="container">
-			<div class="row"><div class="col-sm-6 col-sm-offset-3"><h1>Billard &amp; Darts</h1></div></div>
+			<div class="row">
+				<div class="col-sm-6 col-sm-offset-2">
+					<h1>Billard &amp; Darts</h1>
+					<p><strong>5 Pool Billard Tische <br> 
+					2 Dartautomaten</strong></p>
+				</div>
+			</div>
 			<br>
 			<div class="row">
 				<div class="col-sm-4 col-sm-offset-2">
-					<img src="{{ 'assets/images/billard-reduziert.png'|theme }}" alt="play Billard in Laurel Leaf" class="img-responsive img-rotate-up">
+					<img src="{{ 'assets/images/billard.jpg'|theme }}" alt="play Billard in Laurel Leaf" class="img-responsive img-rotate-up m-b-sm box-shadow">
 				</div>
 				<div class="col-sm-4">
-					<img src="{{ 'assets/images/darts-reduziert.png'|theme }}" alt="play Darts in Laurel Leaf" class="img-responsive img-rotate-down">
+					<img src="{{ 'assets/images/darts.jpg'|theme }}" alt="play Darts in Laurel Leaf" class="img-responsive img-rotate-down m-b-sm box-shadow">
 				</div>
 			</div>
 		</div>
