--- a/themes/laurel-leaf/pages/contact-reservation.htm
+++ b/themes/laurel-leaf/pages/contact-reservation.htm
@@ -89,6 +89,39 @@ is_hidden = 0
                             </div>
                         </div>
                     </div>
+
+                    <!-- Christmas Opening Hours Start -->
+
+                    <div class="row">
+                        <div class="col-xs-2 col-sm-1">
+                            <i class="icon-star icon-2x"></i> 
+                        </div>
+                        <div class="col-xs-10 col-sm-11">
+                            <strong>Weihnachts - Öffnungszeiten</strong><br>
+                            <div class="table-responsive">
+                                <table class="table table-hover">
+                                    <tbody>
+                                        <tr>
+                                            <td>24.12.</td>
+                                            <td>ab 20:00 <strong>Christmas Party</strong></td>
+                                        </tr>
+                                        <tr>
+                                            <td>25. & 26.12.</td>
+                                            <td>ab 17:00</td>
+                                        </tr>
+                                        <tr>
+                                            <td>31.12.</td>
+                                            <td>ab 19:00 <strong>(nur mit Reservierung)</strong></td>
+                                        </tr>
+                                        <tr>
+                                            <td>1.1.18</td>
+                                            <td>geschlossen</td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div> <!-- End Christmas Opening Hours -->
                     
 					<br>
 
