--- a/themes/laurel-leaf/pages/contact-reservation.htm
+++ b/themes/laurel-leaf/pages/contact-reservation.htm
@@ -92,7 +92,7 @@ is_hidden = 0
 
                     <!-- Christmas Opening Hours Start -->
 
-                    <div class="row">
+                    {# <div class="row">
                         <div class="col-xs-2 col-sm-1">
                             <i class="icon-star icon-2x"></i> 
                         </div>
@@ -121,7 +121,7 @@ is_hidden = 0
                                 </table>
                             </div>
                         </div>
-                    </div> <!-- End Christmas Opening Hours -->
+                    </div> #} <!-- End Christmas Opening Hours -->
                     
 					<br>
 
