page /sports-tv redirect to /

--- a/themes/laurel-leaf/pages/sportstv.htm
+++ b/themes/laurel-leaf/pages/sportstv.htm
@@ -4,6 +4,12 @@ layout = "default"
 
 [games]
 ==
+<?php
+	function onStart() {
+		return Redirect::to('/');
+	}
+?>
+==
 <div class="jumbotron worldcup">
       <div class="container">
         <h1>FIFA World Cup</h1>
