--- a/themes/laurel-leaf/pages/contact-reservation.htm
+++ b/themes/laurel-leaf/pages/contact-reservation.htm
@@ -77,8 +77,12 @@ is_hidden = 0
                                             <td>11.00 - 01.00</td>
                                         </tr>
                                         <tr>
-                                            <td>Freitag, Samstag</td>
+                                            <td>Freitag</td>
                                             <td>11.00 - 03.00</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Samstag</td>
+                                            <td>17.00 - 03.00</td>
                                         </tr>
                                         <tr>
                                             <td>Sonntag und Feiertag</td>
