--- a/themes/laurel-leaf/pages/contact-reservation.htm
+++ b/themes/laurel-leaf/pages/contact-reservation.htm
@@ -77,12 +77,8 @@ is_hidden = 0
                                             <td>11.00 - 01.00</td>
                                         </tr>
                                         <tr>
-                                            <td>Freitag</td>
+                                            <td>Freitag, Samstag</td>
                                             <td>11.00 - 03.00</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Samstag</td>
-                                            <td>17.00 - 03.00</td>
                                         </tr>
                                         <tr>
                                             <td>Sonntag und Feiertag</td>
